--- a/test.yml
+++ b/test.yml
@@ -9,7 +9,7 @@ paths:
         - Authentication
       summary: Validates credentials with server and returns the user object.
       description: >-
-        Login or login attempt email is sent. Checks for login attempts and locks account if too many attempts were made.
+        Login or login attempt email is sent. Checks for login attempts in the past 24 hours and locks account if too many attempts were made.
       requestBody:
         required: true
         content:
@@ -23,7 +23,7 @@ paths:
             credentials are valid, responds with user object. resets failed login attempts. Updates last login at. and clears the password reset timestamps.
         '400':
           description: >-
-            error reason is too many failed attempts, the account is locked, please reach out to support. (this is ridiculous but banks do this kind of stuff)
+            error reason is too many failed attempts in 24 hrs, the account is locked try again later.
         '401':
           description: >-
             credentials are invalid, error code 3 reason wrong password. Increases the attempts count and adds a timestamp to the attempts timestamp log.
@@ -80,6 +80,29 @@ paths:
           description: error code 5, reason is a user with the given email already exists.
         '400':
           description: error code 6, reason is the user email is invalid OR error code 7 reason is fields invalid aka too long or too short. i.e. password, user, other fields.
+  /auth/forgot:
+    post:
+      tags:
+        - Authentication
+      summary: Starts the password recovery flow.
+      description: Checks for limit of recovery attempts then continues with flow accordingly .
+      requestBody:
+        required: true
+        content:
+          application/json:
+            example:
+              email: my_email_from_2nd_grade@mail.com
+      responses:
+        '200':
+          description: >-
+            Increases the count of attempts, adds a timestamp. Sets the reset token. Adds an email to the email queue with a link with the attempt token.
+        '400':
+          description: >-
+            error reason is too many attempts in 24 hours, reset is blocked, try again later.
+        '404':
+          description: account does not exist
+
+
 
 
 
